--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Project_DATN_SD08_BaseBallCapSales
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DvtdHub;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=Duong03112007
+spring.datasource.password=123
 
 # JDBC driver
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
