--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Project_DATN_SD08_BaseBallCapSales
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DvtdHub;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DvtdHub1;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123
 
