--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=Project_DATN_SD08_BaseBallCapSales
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DvtdHub1;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=tien2007
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# JDBC driver
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-# JPA/Hibernate (optional, if using Spring Data JPA)
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
