--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Project_DATN_SD08_BaseBallCapSales
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DvtdHub1;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=tien2007
+spring.datasource.password=Duong03112007
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 logging.level.org.hibernate.SQL=DEBUG
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+jwt.secret-key=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+jwt.time-life=1000000
